# jupytypst

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  pyproject.toml
crates/jupytypst/: Cargo.toml
crates/jupytypst/src/: cell.rs  kernel.rs  lib.rs  main.rs  output.rs  persist.rs  repl.rs  session.rs  testkit.rs
crates/jupytypst/tests/: kernel_snapshots.rs
crates/jupytypst/tests/snapshots/: kernel_snapshots__diagnostics_cross_cell.snap  kernel_snapshots__diagnostics_cross_file.snap  kernel_snapshots__diagnostics_error_span.snap  kernel_snapshots__diagnostics_inside_cell.snap  kernel_snapshots__format_switching_directives.snap  kernel_snapshots__layout_did_not_converge.snap  kernel_snapshots__multi_page_svg.snap  kernel_snapshots__page_setup_custom.snap  kernel_snapshots__page_setup_default.snap  kernel_snapshots__page_setup_none.snap  kernel_snapshots__persistent_introspector.snap  kernel_snapshots__persistent_scope.snap  kernel_snapshots__persistent_styles.snap
crates/typsess/: Cargo.toml
crates/typsess/src/: diagnostics.rs  eval.rs  input.rs  layout.rs  lib.rs  persist.rs  tests.rs  world.rs
crates/typst-repl/: Cargo.toml
crates/typst-repl/src/: lib.rs
src/: kernel.rs  main.rs  typst_session.rs
