[package]
name = "jupytypst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
jupyter-protocol = "2.0.0"
runtimelib = { version = "2.0.0", features = ["tokio-runtime"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
