[workspace]
members = ["crates/jupytypst", "crates/typsess"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
codespan-reporting = "0.11.1"
comemo = "0.5.1"
ecow = "0.2.6"
fontdb = { version = "0.23", default-features = false, features = ["fs", "memmap"] }
jupyter-protocol = "2.0.0"
reedline = "0.47.0"
runtimelib = { version = "2.0.0", features = ["tokio-runtime"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tinymist-world = { version = "0.14.6", features = ["system"] }
tinymist-vfs = "0.14.6"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
typst = "0.14.2"
typst-assets = "0.14.2"
typst-eval = "0.14.2"
typst-html = "0.14.2"
typst-layout = "0.14.2"
typsess = { path = "crates/typsess" }
typst-svg = "0.14.2"
uuid = { version = "1.23.1", features = ["v4"] }
