[package]
name = "jupytypst"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ecow.workspace = true
jupyter-protocol.workspace = true
reedline.workspace = true
runtimelib.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
typst.workspace = true
typst-html.workspace = true
typst-svg.workspace = true
typsess.workspace = true
uuid.workspace = true
