[package]
name = "typsess"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
comemo.workspace = true
ecow.workspace = true
fontdb.workspace = true
tinymist-world.workspace = true
tinymist-vfs.workspace = true
typst.workspace = true
typst-assets.workspace = true
typst-eval.workspace = true
typst-html.workspace = true
typst-layout.workspace = true

[dev-dependencies]
tempfile.workspace = true
typst-svg.workspace = true
